fix buttons element alignment

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -82,6 +82,8 @@ body {
   }
 
   .mat-menu-item {
+    display: flex;
+    align-items: center;
     font-size: 18px;
     color: #131314;
     &:last-child {
